# CppMoveBase64

./: .gitignore  CMakeLists.txt  README.md
Doc/: Abi.md  ApiMacros.md  DanglingSpans.md  LowLevelConversion.md  Motivation.md  PimplClasses.md  PimplMacros.md  RecyclingBuffers.md  StreamConversion.md  UniquePtrAndSpan.md
Tests/: CMakeLists.txt
Tests/src/: TestDecodeHello.cpp  TestDecodeOldStyleHello.cpp  TestDecodeStreamed.cpp  TestEncodeHello.cpp  TestEncodeRecycle.cpp  TestEncodeStreamed.cpp  TestEncodeVectorInt.cpp  main.cpp
